# tinysyscall

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
docs/: api.md
examples/: hello_world.rs
examples/linux/linuxc/: dir.c
examples/linux/no_std/: Cargo.toml  README.md  build.rs  rust-toolchain
examples/linux/no_std/.cargo/: config
examples/linux/no_std/src/: main.rs
examples/linux/only_libc/: Cargo.toml  README.md  rust-toolchain
examples/linux/only_libc/.cargo/: config.toml
examples/linux/only_libc/src/: main.rs
examples/no_std/: Cargo.toml
examples/no_std/src/: main.rs
examples/stdio/: Cargo.toml
examples/stdio/src/: lib.rs
no_std_test/: Cargo.toml
src/: arch.rs  console.rs  interface.rs  lang_items.rs  lib.rs  os.rs  utils.rs
src/arch/: riscv.rs  x86_64.rs
src/interface/: types.rs
src/os/: abi_types.rs  linux.rs
src/os/linux/: riscv64.rs  x86_64.rs
tests/: Cargo.toml  abi_types.rs  base.rs  dir.c  file.rs  memory.rs  sal-test.data  stat.c  task.rs
tests/linuxc/: stat.c
tests/no_std/: Cargo.toml
tests/no_std/src/: main.rs
tests/src/: main.rs
tmp/: Cargo.toml
tmp/src/: main.rs
