[package]
name = "tinysyscall"
version = "0.1.0"
edition = "2021"
authors = ["SPeak <speakshen@163.com>"]
license = "Apache-2.0"
description = "a (no depend std) tiny syscall abstract layer..."
readme = "README.md"
documentation = "https://docs.rs/tinysyscall"
repository = "https://github.com/Sunrisepeak/tinysyscall"
keywords = ["system", "system call", "syscall", "abi", "kernel", "os", "linux", "Cross platform"]
categories = ["Operating systems", "No standard library", "Cross platform", "System Call"]


[dependencies]
bitflags = "2.0.0"

[dev-dependencies]
# only for test
libc = "0.2.144"

[[example]]
name = "examples"
path = "examples/hello_world.rs"

[[test]]
name = "hello_tinysyscall"
path = "tests/base.rs"